Fixed z-index calculation for page main content (must be in its own context, not mixed up with topbar)

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -21,6 +21,7 @@ html, body {
 
 .main-content {
     z-index: 0;
+    position: relative;
 }
 
 
